kubernetes/apps/minecraft/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-router
  namespace: minecraft
  labels:
    app.kubernetes.io/name: mc-router
  annotations:
    lbipam.cilium.io/ips: "10.69.65.30"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: mc-router
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
